[gd_scene load_steps=3 format=3 uid="uid://4ryyc41mgaw2"]

[ext_resource type="Script" uid="uid://dinyaanilwien" path="res://scripts/check_box_or_delete_button.gd" id="1_khfk5"]
[ext_resource type="PackedScene" uid="uid://ciumafdorrhly" path="res://scenes/delete_button.tscn" id="1_tjopt"]

[node name="CheckBoxOrDeleteButton" type="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
alignment = 1
script = ExtResource("1_khfk5")

[node name="CheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="DeleteButton" parent="." instance=ExtResource("1_tjopt")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
